--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 						<artifactId>postgresql</artifactId>
 						<version>9.1-901-1.jdbc4</version>
 					</dependency>
+
+
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.26</version>
+					</dependency>
 				</dependencies>
 
 			</plugin>
@@ -265,6 +272,11 @@
 			<version>9.1-901-1.jdbc4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.26</version>
+		</dependency>
 
 
 	</dependencies>
